ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service-nginx
          servicePort: 1234
      - path: /kittens/info
        backend:
          serviceName: service-nginx
          servicePort: 1234
